# audio-quality-assessment-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  post-create.sh  smoke-test.sh
app/: __init__.py  audio_features.py  config.py  fusion.py  main.py  models.py  service.py
docs/: api-schema.md
examples/: smoke-request.json
scripts/: generate_sample_audio.py  smoke_test.sh
src/audio_quality_service/: audio.py  config.py  fusion.py  main.py  metrics.py  quality_backends.py  schemas.py  service.py  upstream.py
