[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-quality-assessment-service"
version = "0.1.0"
description = "Deterministic audio and segment quality assessment service for noisy wearable audio."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "numpy>=1.26.4,<2.0.0",
  "scipy>=1.14.1,<2.0.0",
  "pandas>=2.2.3,<3.0.0",
  "librosa>=0.10.2.post1,<1.0.0",
  "soundfile>=0.12.1,<1.0.0",
  "audioread>=3.0.1,<4.0.0",
  "onnxruntime-gpu>=1.20.1,<2.0.0",
  "PyYAML>=6.0.2,<7.0.0",
  "tqdm>=4.66.5,<5.0.0",
  "matplotlib>=3.9.2,<4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
